package com.ecommerce.pedido.dtos;

import com.ecommerce.pedido.models.enums.TamanhoPorcao;
import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Positive;
import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class ItemCompartilhadoRequestDTO {

    @NotNull(message = "O ID do produto é obrigatório.")
    private Long produtoId;

    @NotNull(message = "A quantidade é obrigatória.")
    @Positive(message = "A quantidade deve ser positiva.")
    private Integer quantidade;

    private String observacao;

    private TamanhoPorcao tamanho = TamanhoPorcao.INTEIRA;
}
